--- a/app/grunt/package.json
+++ b/app/grunt/package.json
@@ -22,5 +22,8 @@
     "grunt-html2js": "^0.2.9",
     "fs-extra": "^0.12.0",
     "grunt-contrib-requirejs": "^0.4.4"
+  },
+  "devDependencies": {
+    "grunt-contrib-connect": "^0.9.0"
   }
 }
